@@ -9,7 +9,7 @@ export(egyptian_methods, egyptian_complete)
 export(eulersPhi)
 export(extGCD)
 export(factorize)
-export(fibonacci)
+export(fibonacci, lucas)
 export(GCD, LCM, mGCD, mLCM)
 export(hermiteNF)
 export(isIntpower)
